--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
     margin: 0px;
     font-family: helvetica;
-    width: 100vw;
-    height: 100vw;
+    /* width: 100vw;
+    height: 100vw; */
 }
 
 .container{
@@ -20,9 +20,10 @@ body{
     margin-top: 10px;
 }
 .library{
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
-    min-width: 75%
+    min-width: 75%;
+    align-content: flex-start;
 }
 
 .navbar{
@@ -46,7 +47,8 @@ nav h3{
     background-color: lightblue;
     margin: 10px;
     padding: 10px;
-    min-width: 200px;
+    min-width: 250px;
+    min-height: 125px;
     align-items: center;
 }
 
